gitops/terraform/modules/sg/main.tf
resource "aws_security_group" "this" {
  name        = "${var.environment}-${var.sg_name}"
  description = "Security group para servidores web en ${var.environment}"
  vpc_id      = var.vpc_id

  tags = {
    Name        = "${var.environment}-${var.sg_name}"
    Environment = var.environment
    Owner       = var.owner
  }
}

# Permitir SSH desde cualquier lugar (CAMBIAR EN PRODUCCIÓN)
resource "aws_security_group_rule" "allow_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.this.id
}

# Permitir HTTP
resource "aws_security_group_rule" "allow_http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.this.id
}

# Permitir HTTPS
resource "aws_security_group_rule" "allow_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.this.id
}

# Permitir todo el tráfico saliente
resource "aws_security_group_rule" "allow_all_outbound" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.this.id
}
